WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132429
REGRESSION (new multi-column): WebKit2.ResizeReversePaginatedWebView fails on debug bots
https://bugs.webkit.org/show_bug.cgi?id=132429
Summary
REGRESSION (new multi-column): WebKit2.ResizeReversePaginatedWebView fails on...
Alexey Proskuryakov
Reported
2014-05-01 09:38:26 PDT
To reproduce: "run-api-tests WebKit2.ResizeReversePaginatedWebView" /Volumes/Data/slave/mavericks-debug/build/Tools/TestWebKitAPI/Tests/WebKit2/ResizeReversePaginatedWebView.cpp:50: Failure Value of: pageCount Actual: 1 Expected: expectedPageCount Which is: 20
Attachments
Patch
(2.61 KB, patch)
2014-05-01 11:45 PDT
,
Dave Hyatt
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-05-01 11:45:35 PDT
Created
attachment 230598
[details]
Patch
Dave Hyatt
Comment 2
2014-05-01 12:12:48 PDT
Fix landed in
r168113
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug