REGRESSION (new multi-column): WebKit2.ResizeReversePaginatedWebView fails on debug bots https://bugs.webkit.org/show_bug.cgi?id=132429

Reviewed by Alexey Proskuryakov.

Make sure to get the column count directly from the column set.
I was returning the theoretical column count from the flow thread,
and that wasn't the right value.

* rendering/RenderMultiColumnSet.h:
* rendering/RenderView.cpp:
(WebCore::RenderView::pageCount):



Canonical link: https://commits.webkit.org/150468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168113 268f45cc-cd09-0410-ab3c-d52691b4dbfc